--- a/views/login.ejs
+++ b/views/login.ejs
@@ -116,7 +116,7 @@
               <p class="text-sm font-light text-gray-500">
                 Don’t have an account yet?
                 <a
-                  href="dashboard"
+                  href="tem_dash"
                   class="font-medium text-blue-600 hover:underline"
                   >Sign up</a
                 >
