--- a/assets/css/tem_dash.css
+++ b/assets/css/tem_dash.css
@@ -734,3 +734,41 @@ main .recent-orders a {
 .popup-background.active {
   display: flex;
 }
+
+/* new  custom button*/
+
+/* Your custom styles */
+main .custom-button {
+  display: block;
+  color: white;
+  background-color: #1d4ed8; /* Blue-700 */
+  transition: background-color 0.2s, box-shadow 0.2s;
+  font-weight: 500;
+  font-size: 0.875rem; /* 14px */
+  padding: 0.625rem 1.25rem; /* 10px 20px */
+  text-align: center;
+  border-radius: 0.375rem; /* 6px */
+  cursor: pointer;
+  outline: none;
+  border: none;
+}
+
+main .custom-button:hover {
+  background-color: #1e40af; /* Blue-800 */
+}
+
+main .custom-button:focus {
+  box-shadow: 0 0 0 0.25rem rgba(66, 153, 225, 0.5); /* Blue-300 */
+}
+
+main .custom-button.dark-mode {
+  background-color: #1a4c8b; /* Dark Blue-600 */
+}
+
+main .custom-button.dark-mode:hover {
+  background-color: #1d4ed8; /* Dark Blue-700 */
+}
+
+main .custom-button.dark-mode:focus {
+  box-shadow: 0 0 0 0.25rem rgba(53, 121, 180, 0.5); /* Dark Blue-800 */
+}
