--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -54,20 +54,19 @@
                 </div>
                 <div>
                   <label
-                    for="category"
+                    for="user-name"
                     class="block mb-2 text-sm font-medium text-gray-900"
                   >
-                    Category
+                    User Name
                   </label>
-                  <select
-                    name="category"
-                    id="category"
+                  <input
+                    type="text"
+                    name="user-name"
+                    id="user-name"
                     class="bg-white border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5"
+                    placeholder="John.Doe"
                     required=""
-                  >
-                    <option value="admin">Admin</option>
-                    <option value="customer">Customer</option>
-                  </select>
+                  />
                 </div>
               </div>
               <div class="grid grid-cols-2 gap-4">
@@ -121,22 +120,41 @@
                   required=""
                 />
               </div>
+              <div class="grid grid-cols-2 gap-4">
+                <div>
+                  <label
+                    for="category"
+                    class="block mb-2 text-sm font-medium text-gray-900"
+                  >
+                    User Category
+                  </label>
+                  <select
+                    name="category"
+                    id="category"
+                    class="bg-white border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5"
+                    required=""
+                  >
+                    <option value="admin">Admin</option>
+                    <option value="customer">Customer</option>
+                  </select>
+                </div>
 
-              <div>
-                <label
-                  for="shop-catagory"
-                  class="block mb-2 text-sm font-medium text-gray-900"
-                >
-                  Shop Category
-                </label>
-                <input
-                  type="text"
-                  name="shop-catagory"
-                  id="shop-catagory"
-                  class="bg-white border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5"
-                  placeholder="Groceries"
-                  required=""
-                />
+                <div>
+                  <label
+                    for="shop-catagory"
+                    class="block mb-2 text-sm font-medium text-gray-900"
+                  >
+                    Shop Category
+                  </label>
+                  <input
+                    type="text"
+                    name="shop-catagory"
+                    id="shop-catagory"
+                    class="bg-white border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5"
+                    placeholder="Groceries"
+                    required=""
+                  />
+                </div>
               </div>
 
               <div class="grid grid-cols-2 gap-4">
