--- a/assets/css/dashboard.style.css
+++ b/assets/css/dashboard.style.css
@@ -727,10 +727,39 @@ main .recent-orders a {
   text-align: center;
 }
 
-.popup-content .modal-title {
+/* .popup-content .modal-title {
   color: var(--color-danger);
-}
+} */
 
 .popup-background.active {
   display: flex;
+}
+
+.popup-edit-background {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+}
+
+.popup-edit-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: var(--box-shadow);
+  color: var(--color-success);
+  text-align: center;
+}
+
+/* .popup-content .modal-title {
+  color: var(--color-danger);
+} */
+
+.popup-edit-background.active {
+  display: flexbox;
 }
