--- a/views/new_dashboard.ejs
+++ b/views/new_dashboard.ejs
@@ -36,7 +36,7 @@
     </script>
   </head>
 
-  <body class="bg-gray-50 dark:bg-gray-800">
+  <body class="bg-gray-100 dark:bg-gray-800">
     <nav
       class="fixed z-30 w-full bg-gray-200 border-b border-gray-200 dark:bg-gray-800 dark:border-gray-700"
     >
@@ -480,7 +480,7 @@
                 <h1
                   class="text-xl font-semibold text-gray-900 sm:text-2xl dark:text-white"
                 >
-                  All products
+                  All Products
                 </h1>
               </div>
               <div
@@ -553,20 +553,10 @@
                   <table
                     class="min-w-full divide-y divide-gray-200 table-fixed dark:divide-gray-600"
                   >
-                    <thead class="bg-gray-100 dark:bg-gray-700">
+                    <thead class="bg-gray-300 dark:bg-gray-700">
                       <tr>
                         <th scope="col" class="p-4">
-                          <div class="flex items-center">
-                            <input
-                              id="checkbox-all"
-                              aria-describedby="checkbox-1"
-                              type="checkbox"
-                              class="w-4 h-4 border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:focus:ring-primary-600 dark:ring-offset-gray-800 dark:bg-gray-700 dark:border-gray-600"
-                            />
-                            <label for="checkbox-all" class="sr-only"
-                              >checkbox</label
-                            >
-                          </div>
+                          <div class="flex items-center">#</div>
                         </th>
                         <th
                           scope="col"
@@ -618,29 +608,54 @@
                       <tr class="hover:bg-gray-200 dark:hover:bg-gray-700">
                         <td class="w-4 p-4">
                           <div class="flex items-center">
-                            <input
-                              id="checkbox-194556"
-                              aria-describedby="checkbox-1"
-                              type="checkbox"
-                              class="w-4 h-4 border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:focus:ring-primary-600 dark:ring-offset-gray-800 dark:bg-gray-700 dark:border-gray-600"
-                            />
-                            <label for="checkbox-194556" class="sr-only"
-                              >checkbox</label
+                            <svg
+                              fill="#000000"
+                              width="30px"
+                              height="30px"
+                              viewBox="-2 -2 24.00 24.00"
+                              xmlns="http://www.w3.org/2000/svg"
+                              stroke="#000000"
+                              stroke-width="2"
                             >
+                              <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                              <g
+                                id="SVGRepo_tracerCarrier"
+                                stroke-linecap="round"
+                                stroke-linejoin="round"
+                                stroke="#CCCCCC"
+                                stroke-width="0.04"
+                              ></g>
+                              <g id="SVGRepo_iconCarrier">
+                                <path
+                                  d="M7.8 10a2.2 2.2 0 0 0 4.4 0 2.2 2.2 0 0 0-4.4 0z"
+                                ></path>
+                              </g>
+                            </svg>
                           </div>
                         </td>
                         <td
-                          class="p-4 text-sm font-normal text-gray-500 whitespace-nowrap dark:text-gray-400"
+                          class="flex p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
                         >
+                          <img
+                            class="w-10 h-10 rounded-full"
+                            src="/images/product_demo.png"
+                            alt="Neil Sims avatar"
+                          />
+
                           <div
-                            class="text-base font-semibold text-gray-900 dark:text-white"
+                            class="ml-2 text-sm font-normal text-gray-500 dark:text-gray-400"
                           >
-                            Education Dashboard
-                          </div>
-                          <div
-                            class="text-sm font-normal text-gray-500 dark:text-gray-400"
-                          >
-                            Html templates
+                            <div
+                              class="text-base font-semibold text-gray-900 dark:text-white"
+                            >
+                              Neil Sims
+                            </div>
+                            <div
+                              class="overflow-hidden text-base font-normal text-gray-500 truncate xl:max-w-xs dark:text-gray-400"
+                            >
+                              Start developing with an open-source library of
+                              over 450+ UI components,
+                            </div>
                           </div>
                         </td>
                         <td
@@ -674,6 +689,32 @@
                         <td class="p-4 space-x-2 whitespace-nowrap">
                           <button
                             type="button"
+                            id="updateProductButton"
+                            data-drawer-target="drawer-update-product-default"
+                            data-drawer-show="drawer-update-product-default"
+                            aria-controls="drawer-update-product-default"
+                            data-drawer-placement="right"
+                            class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white rounded-lg bg-yellow-700 hover:bg-yellow-800 focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
+                          >
+                            <svg
+                              class="w-4 h-4 mr-2"
+                              fill="currentColor"
+                              viewBox="0 0 20 20"
+                              xmlns="http://www.w3.org/2000/svg"
+                            >
+                              <path
+                                d="M17.414 2.586a2 2 0 00-2.828 0L7 10.172V13h2.828l7.586-7.586a2 2 0 000-2.828z"
+                              ></path>
+                              <path
+                                fill-rule="evenodd"
+                                d="M2 6a2 2 0 012-2h4a1 1 0 010 2H4v10h10v-4a1 1 0 112 0v4a2 2 0 01-2 2H4a2 2 0 01-2-2V6z"
+                                clip-rule="evenodd"
+                              ></path>
+                            </svg>
+                            cart
+                          </button>
+                          <button
+                            type="button"
                             id="deleteProductButton"
                             data-drawer-target="drawer-delete-product-default"
                             data-drawer-show="drawer-delete-product-default"
@@ -703,61 +744,6 @@
               </div>
             </div>
           </div>
-
-          <!-- Edit Product Drawer -->
-          <!-- <div id="drawer-update-product-default " class="fixed top-0 right-0 z-40 w-full h-screen max-w-xs p-4 overflow-y-auto transition-transform translate-x-full bg-white dark:bg-gray-800 " tabindex="-1 " aria-labelledby="drawer-label " aria-hidden="true ">
-    <h5 id="drawer-label " class="inline-flex items-center mb-6 text-sm font-semibold text-gray-500 uppercase dark:text-gray-400 ">Update Product</h5>
-    <button type="button " data-drawer-dismiss="drawer-update-product-default " aria-controls="drawer-update-product-default " class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 absolute top-2.5 right-2.5 inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white ">
-        <svg aria-hidden="true " class="w-5 h-5 " fill="currentColor " viewBox="0 0 20 20 " xmlns="http://www.w3.org/2000/svg "><path fill-rule="evenodd " d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z " clip-rule="evenodd "></path></svg>
-        <span class="sr-only ">Close menu</span>
-    </button>
-    <form action="#">
-        <div class="space-y-4 ">
-            <div>
-                <label for="name " class="block mb-2 text-sm font-medium text-gray-900 dark:text-white ">Name</label>
-                <input type="text " name="title " id="name " class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 " value="Education Dashboard " placeholder="Type product name " required="">
-            </div>
-            <div>
-                <label for="category " class="block mb-2 text-sm font-medium text-gray-900 dark:text-white ">Technology</label>
-                <select id="category " class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 ">
-                    <option selected="">Flowbite</option>
-                    <option value="RE ">React</option>
-                    <option value="AN ">Angular</option>
-                    <option value="VU ">Vue JS</option>
-                </select>
-            </div>
-            <div>
-                <label for="price " class="block mb-2 text-sm font-medium text-gray-900 dark:text-white ">Price</label>
-                <input type="number " name="price " id="price " class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 " value="2999 " placeholder="$149 " required="">
-            </div>
-            <div>
-                <label for="description " class="block mb-2 text-sm font-medium text-gray-900 dark:text-white ">Description</label>
-                <textarea id="description " rows="4 " class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 " placeholder="Enter event description here ">Start developing with an open-source library of over 450+ UI components, sections, and pages built with the utility classes from Tailwind CSS and designed in Figma.</textarea>
-            </div>
-            <div>
-                <label for="discount " class="block mb-2 text-sm font-medium text-gray-900 dark:text-white ">Discount</label>
-                <select id="discount " class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 ">
-                    <option selected="">No</option>
-                    <option value="5 ">5%</option>
-                    <option value="10 ">10%</option>
-                    <option value="20 ">20%</option>
-                    <option value="30 ">30%</option>
-                    <option value="40 ">40%</option>
-                    <option value="50 ">50%</option>
-                </select>
-            </div>
-        </div>
-        <div class="bottom-0 left-0 flex justify-center w-full pb-4 mt-4 space-x-4 sm:absolute sm:px-4 sm:mt-0 ">
-            <button type="submit " class="w-full justify-center text-white bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800 ">
-                Update
-            </button>
-            <button type="button " class="w-full justify-center text-red-600 inline-flex items-center hover:text-white border border-red-600 hover:bg-red-600 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:border-red-500 dark:text-red-500 dark:hover:text-white dark:hover:bg-red-600 dark:focus:ring-red-900 ">
-                <svg aria-hidden="true " class="w-5 h-5 mr-1 -ml-1 " fill="currentColor " viewBox="0 0 20 20 " xmlns="http://www.w3.org/2000/svg "><path fill-rule="evenodd " d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z " clip-rule="evenodd "></path></svg>
-                Delete
-            </button>
-        </div>
-    </form>
-</div> -->
 
           <!-- Delete Product Drawer -->
           <!-- <div id="drawer-delete-product-default " class="fixed top-0 right-0 z-40 w-full h-screen max-w-xs p-4 overflow-y-auto transition-transform translate-x-full bg-white dark:bg-gray-800 " tabindex="-1 " aria-labelledby="drawer-label " aria-hidden="true ">
@@ -1109,43 +1095,25 @@
                   </div>
                   <div>
                     <label
-                      for="product_category"
+                      for="supplier"
                       class="ml-2 block mb-2 text-sm font-medium text-gray-900"
                     >
-                      Product Category
+                      Product Supplier
                     </label>
                     <select
-                      name="product_category"
-                      id="product_category"
+                      name="supplier"
+                      id="supplier"
                       class="bg-white border shadow-md border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5"
                       required=""
                     >
-                      <option value="food">Groceries and Food</option>
-                      <option value="electronics">Electronics</option>
-                      <option value="cosmetics">
-                        Beauty and Personal Care
-                      </option>
-                      <option value="books">Books and Stationery</option>
+                      <option value="food">Grond Food</option>
+                      <option value="electronics">Eleics</option>
+                      <option value="cosmetics">BeauCare</option>
+                      <option value="books">Boonery</option>
                     </select>
                   </div>
                 </div>
 
-                <div>
-                  <label
-                    for="product_description"
-                    class="ml-2 block mb-2 text-sm font-medium text-gray-900"
-                  >
-                    Description
-                  </label>
-                  <input
-                    type="text"
-                    name="product_description"
-                    id="product_description"
-                    class="bg-white border shadow-md border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5"
-                    placeholder="no description yet"
-                    required=""
-                  />
-                </div>
                 <div class="grid grid-cols-2 gap-4">
                   <div>
                     <label
@@ -1219,28 +1187,6 @@
                   </div>
                 </div>
 
-                <div class="grid grid-cols-2 gap-4">
-                  <div>
-                    <label
-                      for="supplier"
-                      class="ml-2 block mb-2 text-sm font-medium text-gray-900"
-                    >
-                      Product Supplier
-                    </label>
-                    <select
-                      name="supplier"
-                      id="supplier"
-                      class="bg-white border shadow-md border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5"
-                      required=""
-                    >
-                      <option value="food">Grond Food</option>
-                      <option value="electronics">Eleics</option>
-                      <option value="cosmetics">BeauCare</option>
-                      <option value="books">Boonery</option>
-                    </select>
-                  </div>
-                </div>
-
                 <div class="flex items-center justify-between">
                   <button
                     type="submit"
@@ -1281,28 +1227,6 @@
       closeModal2Button.addEventListener("click", () => {
         modal2.classList.add("hidden");
       });
-    </script>
-
-    <script>
-      const popupBackground = document.getElementById("popupBackground");
-      const closePopupButton = document.getElementById("closePopup");
-
-      // Open the pop-up
-      const openPopup = () => {
-        popupBackground.classList.add("active");
-      };
-
-      // Close the pop-up
-      const closePopup = () => {
-        popupBackground.classList.remove("active");
-      };
-
-      // Attach event listeners
-      closePopupButton.addEventListener("click", closePopup);
-
-      // Trigger the pop-up on some action (e.g., a button click)
-      const triggerButton = document.getElementById("createProductButton"); // Replace with your trigger element
-      triggerButton.addEventListener("click", openPopup);
     </script>
 
     <script async defer src="https://buttons.github.io/buttons.js "></script>
