--- a/views/new_dashboard.ejs
+++ b/views/new_dashboard.ejs
@@ -183,7 +183,7 @@
             <div
               class="bg-gray-200 flex-1 px-3 space-y-1 bg-white divide-y divide-gray-200 dark:bg-gray-800 dark:divide-gray-700"
             >
-              <ul class="pb-2 space-y-2">
+              <ul class="pb-2 space-y-5">
                 <li>
                   <form action="#" method="GET" class="lg:hidden">
                     <label for="mobile-search" class="sr-only">Search</label>
@@ -291,13 +291,42 @@
                 <li>
                   <a
                     href=""
-                    class="bg-gray-100 flex items-center p-2 text-base text-gray-900 rounded-lg hover:bg-gray-100 group dark:text-gray-200 dark:hover:bg-gray-700"
+                    class="bg-white flex items-center p-2 text-base text-gray-900 rounded-lg hover:bg-gray-100 group dark:text-gray-200 dark:hover:bg-gray-700"
                   >
                     <span class="material-icons-sharp mr-3"> inventory </span>
                     <h3>Product</h3></a
                   >
                 </li>
                 <li>
+                  <a
+                    href=""
+                    class="flex items-center p-2 text-base text-gray-900 rounded-lg hover:bg-gray-100 group dark:text-gray-200 dark:hover:bg-gray-700"
+                  >
+                    <span class="material-icons-sharp mr-3">
+                      shopping_cart
+                    </span>
+                    <h3>Cart</h3></a
+                  >
+                </li>
+                <li>
+                  <a
+                    href=""
+                    class="flex items-center p-2 text-base text-gray-900 rounded-lg hover:bg-gray-100 group dark:text-gray-200 dark:hover:bg-gray-700"
+                  >
+                    <span class="material-icons-sharp mr-3"> grading </span>
+                    <h3>Orders</h3></a
+                  >
+                </li>
+                <li>
+                  <a
+                    href=""
+                    class="flex items-center p-2 text-base text-gray-900 rounded-lg hover:bg-gray-100 group dark:text-gray-200 dark:hover:bg-gray-700"
+                  >
+                    <span class="material-icons-sharp mr-3"> archive </span>
+                    <h3>Suppliers</h3></a
+                  >
+                </li>
+                <!-- <li>
                   <button
                     type="button"
                     class="flex items-center w-full p-2 text-base text-gray-900 transition duration-75 rounded-lg group hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700"
@@ -345,7 +374,7 @@
                       >
                     </li>
                   </ul>
-                </li>
+                </li> -->
                 <li>
                   <a
                     href=""
@@ -367,7 +396,7 @@
                     <span class="ml-3" sidebar-toggle-item>Settings</span>
                   </a>
                 </li>
-                <li>
+                <!-- <li>
                   <button
                     type="button"
                     class="flex items-center w-full p-2 text-base text-gray-900 transition duration-75 rounded-lg group hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700"
@@ -435,7 +464,7 @@
                       >
                     </li>
                   </ul>
-                </li>
+                </li> -->
               </ul>
             </div>
           </div>
