--- a/views/new1_dashboard.ejs
+++ b/views/new1_dashboard.ejs
@@ -670,8 +670,8 @@
               </h1>
               <form
                 class="text-left space-y-4 md:space-y-6"
-                action=""
-                method=""
+                action="/addNewProduct"
+                method="post"
               >
                 <div class="grid grid-cols-2 gap-4">
                   <div>
@@ -738,7 +738,7 @@
                       Price
                     </label>
                     <input
-                      type="number"
+                      type="float"
                       name="price"
                       id="price"
                       class="bg-white border shadow-md border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5"
@@ -1064,6 +1064,7 @@
                     html += `
                     <tr>
                         <td>${result.p_name}</td>
+                        <td>${result.p_code}</td>
                         <td>${result.p_des}</td>
                         <td>${result.p_category}</td>
                         <td>${result.total_amount}</td>
